# AiogramRLT-test-task-April2024

./: .gitignore  README.md  pyproject.toml
internal/api/v1/: handlers.py
internal/config/: settings.py
internal/db/: base.py  db.py
internal/db/models/: enums.py
internal/scripts/: docker-compose.yml
internal/utils/: strings.py  utils.py  validate_input.py
