[tool.poetry]
name = "rlt-april-test-task"
version = "0.1.0"
description = ""
authors = ["disqurell <lisyachenko.daniil@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.2.1"
aiogram = "^3.4.1"
pymongo = "4.6.3"
motor = "3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
